# naverdictMCP

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  Dockerfile  LICENSE  LOW_PRIORITY_OPTIMIZATION_COMPLETED.md  Makefile  README.md  api_response.json  app.py  debug_html.py  debug_json_structure.py  debug_output.html  docker-compose.yml  pyproject.toml  pytest.ini  vercel.json
.github/workflows/: ci.yml  docker-publish.yml
src/: __init__.py  application.py  auth.py  cache.py  client.py  config.py  logger.py  metrics.py  models.py  parser.py  rate_limiter.py  responses.py  server.py  service.py
tests/: conftest.py  test_application.py  test_cache.py  test_client.py  test_code_quality.py  test_config.py  test_integration.py  test_logger.py  test_metrics.py  test_parser.py  test_performance.py  test_rate_limiter.py  test_server.py  test_service.py
